--- a/templates/index/become-partner.html.twig
+++ b/templates/index/become-partner.html.twig
@@ -11,7 +11,7 @@
     <section id="partner-step">
         <div class="inner">
             <div class="row same-height">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Step 1</div>
                         <div class="faq-inner-body ">
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Step 2</div>
                         <div class="faq-inner-body">
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Step 3</div>
                         <div class="faq-inner-body">
@@ -53,7 +53,7 @@
         <div class="inner">
             <h1>Grow your business by working with us</h1>
             <form class="row" id="contact-form">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="form-group">
                         <div class="label">
                             <div class="icon-c"><img src="{{path('index')}}/img/icon-contact-1.png" /></div>
@@ -76,7 +76,7 @@
                         <input type="text" placeholder="Enter your email" class="form-control" />
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="form-group">
                         <div class="label">
                             <div class="icon-c"><img src="{{path('index')}}/img/icon-contact-6.png" /></div>
@@ -96,7 +96,7 @@
                         <textarea placeholder="Briefly describe the services that you offer" class="form-control"></textarea>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="form-group">
                         <div class="label">
                             <div class="icon-c"><img src="{{path('index')}}/img/icon-contact-7.png" /></div>
