--- a/templates/index/contact.html.twig
+++ b/templates/index/contact.html.twig
@@ -12,7 +12,7 @@
         <div class="inner">
             <h1>Have a question, proposal or request?</h1>
             <form class="row" id="contact-form">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="form-group">
                         <div class="label">
                             <div class="icon-c"><img src="{{path('index')}}/img/icon-contact-1.png" /></div>
@@ -28,7 +28,7 @@
                         <input type="text" placeholder="Enter your company name" class="form-control" />
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="form-group">
                         <div class="label">
                             <div class="icon-c"><img src="{{path('index')}}/img/icon-contact-2.png" /></div>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="form-group">
                         <div class="label">
                             <div class="icon-c"><img src="{{path('index')}}/img/icon-contact-5.png" /></div>
@@ -70,7 +70,7 @@
         <div class="inner">
             <h1>Frequently Asked Questions</h1>
             <div class="row same-height">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Question 1</div>
                         <div class="faq-inner-body">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Question 2</div>
                         <div class="faq-inner-body">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Question 3</div>
                         <div class="faq-inner-body">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Question 4</div>
                         <div class="faq-inner-body">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Question 5</div>
                         <div class="faq-inner-body">
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4">
                     <div class="faq-inner">
                         <div class="faq-item-head">Question 6</div>
                         <div class="faq-inner-body">
@@ -135,12 +135,12 @@
 
     <section id="partenaire-contact">
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-md-8">
                 <p class="text-faded pepper-title">GROW WITH US</p>
                 <p class="text-1">Sell your services through <a href="#">Pepperweb Growth Store</a></p>
                 <p class="text-2">Work with <a href="#">Pepperweb Growth Store</a> to provide your services &amp; take home 100% of your fee.</p>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4">
                 <a class="d-inline-flex btn" href="#">BECOME A PARTNER</a>
             </div>
         </div>
