--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,11 +76,11 @@
                 </div>
                 <div class="col-md-12 mx-auto d-flex justify-content-center">
                     <ul class="d-flex p-0 social-icons">
-                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-facebook.png" alt="" /></a></li>
-                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-twitter.png" alt="" /></a></li>
-                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-dribble.png" alt="" /></a></li>
-                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-vimeo.png" alt="" /></a></li>
-                        <li><a href="#" target="_blank"><img src="{{path('index')}}img/footer-ico-google.png" alt="" /></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-vimeo"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-12 mx-auto d-flex justify-content-center">
